--- a/src/components/Dropdown/dropdown.module.scss
+++ b/src/components/Dropdown/dropdown.module.scss
@@ -23,7 +23,7 @@
     background: var(--background-color);
     padding: $space-xs;
     box-shadow: $shadow-object-m;
-    border-radius: $corner-radius-xl;
+    border-radius: $border-radius-xl;
     font-family: $octuple-font-family;
     transition: all $motion-duration-fast $motion-easing-easeout;
     min-width: 200px;
