--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -132,7 +132,7 @@
                 line-height: $layout-zero-trigger-height;
                 text-align: center;
                 background: var(--primary-color);
-                border-radius: 0 $corner-radius-xs $corner-radius-xs 0;
+                border-radius: 0 $border-radius-xs $border-radius-xs 0;
                 cursor: pointer;
                 padding: $space-xxs;
                 transition: background 0.3s ease;
@@ -153,12 +153,12 @@
                 }
 
                 &-left {
-                    border-radius: 0 $corner-radius-xs $corner-radius-xs 0;
+                    border-radius: 0 $border-radius-xs $border-radius-xs 0;
                 }
 
                 &-right {
                     left: -$layout-zero-trigger-width;
-                    border-radius: $corner-radius-xs 0 0 $corner-radius-xs;
+                    border-radius: $border-radius-xs 0 0 $border-radius-xs;
                 }
             }
         }
