--- a/src/components/Tooltip/tooltip.module.scss
+++ b/src/components/Tooltip/tooltip.module.scss
@@ -25,7 +25,7 @@ $tooltip-arrow-shadow: 1px 1px 2px rgba(15, 20, 31, 0.12);
     text-align: center;
     z-index: $z-index-400;
     padding: $space-xs;
-    border-radius: $corner-radius-s;
+    border-radius: $border-radius-s;
     overflow-wrap: break-word;
 
     &.dark {
